# gssapi-layer-c-

./: CMakeLists.txt  README.md  doxygen.conf
docs/html/: annotated.html  classGss_1_1ClientContext-members.html  classGss_1_1ClientContext.html  classGss_1_1ClientContext__coll__graph.map  classGss_1_1ClientContext__coll__graph.md5  classGss_1_1ClientContext__inherit__graph.map  classGss_1_1ClientContext__inherit__graph.md5  classGss_1_1Context-members.html  classGss_1_1Context.html  classGss_1_1Context__coll__graph.map  classGss_1_1Context__coll__graph.md5  classGss_1_1Context__inherit__graph.map  classGss_1_1Context__inherit__graph.md5  classGss_1_1ServiceContext-members.html  classGss_1_1ServiceContext.html  classGss_1_1ServiceContext__coll__graph.map  classGss_1_1ServiceContext__coll__graph.md5  classGss_1_1ServiceContext__inherit__graph.map  classGss_1_1ServiceContext__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  gsslayer_8cpp.html  gsslayer_8cpp__incl.map  gsslayer_8cpp__incl.md5  gsslayer_8h.html  gsslayer_8h__dep__incl.map  gsslayer_8h__dep__incl.md5  gsslayer_8h__incl.map  gsslayer_8h__incl.md5  gsslayer_8h_source.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+13 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+38 more)
src/: gsslayer.cpp  gsslayer.h
test/: client.cpp  server.cpp  tools.cpp  tools.h
